--- a/wolt_data_model/dbt_project.yml
+++ b/wolt_data_model/dbt_project.yml
@@ -28,6 +28,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
+  +start: Jan 1 2020
   wolt_data_model:
     # Config indicated by + and applies to all files under models/example/
     +materialized: table
