--- a/wolt_data_model/config/profiles.yml
+++ b/wolt_data_model/config/profiles.yml
@@ -6,5 +6,5 @@ wolt_data_store:
   outputs:
     local:
       type: duckdb
-      path: ../shared/db/datamart.duckdb
+      path: "{{ env_var('DUCKDB_FILE_PATH') }}"
       schema: wolt_data_model
